--- a/release-notes/4.7.28.md
+++ b/release-notes/4.7.28.md
@@ -531,12 +531,37 @@ Released December 6, 2017
 
 This release was developed by the following code authors:
 
-AGH Strategies - Alice Frumin, Andrew Hunt; Agileware - Alok Patel, Justin Freeman; Australian Greens - Seamus Lee; Christian Wach; Circle Interactive - Dave Jenkins; CiviCoop - Klaas Eikelboom; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet, Yashodha Chaku; CiviFirst - John Kirk; Community IT Academy - William Mortada; CompuCorp - Michael Devery, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy; Daniël van Vuuren; Deepak Srivastava; Freeform Solutions - Herb van den Dool; Fuzion - Jitendra Purohit; JMA Consulting - Edsel Lopez, Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery - Allen Shaw; Lemniscus - Noah Miller; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting - Matthew Wire; mukeshcompucorp; olivierh65; Pawel Nowak; powdevel; Progressive Technology Project - Jamie McClelland; Tadpole Collective - Kevin Cristiano; Wikimedia Foundation - Eileen McNaughton, Maggie Epps
+AGH Strategies - Alice Frumin, Andrew Hunt; Agileware - Alok Patel, Justin
+Freeman; Australian Greens - Seamus Lee; Christian Wach; Circle Interactive -
+Dave Jenkins; CiviCoop - Klaas Eikelboom; CiviCRM - Coleman Watts, Tim Otten;
+CiviDesk - Nicolas Ganivet, Yashodha Chaku; CiviFirst - John Kirk; Community IT
+Academy - William Mortada; CompuCorp - Michael Devery, Mukesh Ram, Omar Abu
+Hussein; Coop SymbioTIC - Mathieu Lutfy; Daniël van Vuuren; Deepak Srivastava;
+Freeform Solutions - Herb van den Dool; Fuzion - Jitendra Purohit; JMA
+Consulting - Edsel Lopez, Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery -
+Allen Shaw; Lemniscus - Noah Miller; Megaphone Technology Consulting - Jon
+Goldberg; MJW Consulting - Matthew Wire; Olivier Hertrich; Pawel Nowak; PowDevel -
+Beto Aveiga; Progressive Technology Project - Jamie McClelland; Tadpole
+Collective - Kevin Cristiano; Wikimedia Foundation - Eileen McNaughton, Maggie
+Epps
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-Adam Zilkie; AGH Strategies - Alice Frumin; Agileware - Agileware Team; Andrew Thompson; anna; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; British Humanist Association - William Gordon; Christian Wach; Circle Interactive - Dave Jenkins; CiviCoop - Klaas Eikelboom; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet, Sunil Pawar, Yashodha Chaku; CiviFirst - John Kirk; Community IT Academy - William Mortada; CompuCorp - Guanhuan Chen, Michael Devery, Mirela Stanila, Omar Abu Hussein; Coop SymbioTIC - Mathieu Lutfy; DanielvV; Dave Greenberg; DevMate - Adam Kwiatkowski; Effy Elden; Electronic Frontier Foundation - Mark Burdett; Freeform Solutions - Herb van den Dool; Fuzion - Jitendra Purohit; Ginkgo Street Labs - Frank Gómez; hollandopensource.nl; jcorlew; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb, Pradeep Nayak; Joanne Chester; Johan Vervloet; John Kingsnorth; Joinery - Allen Shaw; jorich-2000; klevie; Korlon - Stuart Gaston; Left Join Labs - Sean Madsen; Lemniscus - Noah Miller; Lighthouse Design and Consulting - Brian Shaughnessy; lorenzo.ardizzone@y-tech.it; MC3 - Graham Mitchell; Megaphone Technology Consulting - Jon Goldberg; mgribaudo; MJW Consulting - Matthew Wire; Mohamed Ziada; mukesh; mukeshcompucorp; myDropWizard - David Snopek; neilz; nicw; olivier; Pawel Nowak; Progressive Technology Project - Jamie McClelland; redgar; Responsive Development Technologies - Thomas Nilefalk; Semper IT - Karin Gerritsen; SEN Magazine - Jeremy Nicholls; Skvare - Mark Hanna; smallbiz; Spry Digital - Ellen Hendricks; Squiffle Consulting - Aidan Saunders; stevel; Systopia - Björn Endres; Tadpole Collective - Kevin Cristiano; Tech To The People - Xavier Dutoit; vingle; waddyvic; Web Access - Kurund Jalmi; Wikimedia Foundation - Eileen McNaughton
+Adam Zilkie; AGH Strategies - Josh Corlew; Agileware - Agileware Team; Andrew
+Thompson; Blackfly Solutions - Alan Dixon; British Humanist Association -
+William Gordon; CiviDesk - Sunil Pawar; CompuCorp - Anna Kovalova, Guanhuan
+Chen, Mirela Stanila; DevMate - Adam Kwiatkowski; Effy Elden; Electronic
+Frontier Foundation - Mark Burdett; Ginkgo Street Labs - Frank Gómez; JMA
+Consulting - Joe Murray; Joanne Chester; Johan Vervloet; Jonathan Richardson;
+Korlon - Stuart Gaston; Left Join Labs - Sean Madsen; Levity - Kevin Levie;
+Lighthouse Design and Consulting - Brian Shaughnessy; Lorenzo Ardizzone; MC3 -
+Graham Mitchell; Marcello Gribaudo; Mohamed Ziada; myDropWizard - David Snopek;
+Neil Zampella; Nicol Wistreich; Responsive Development Technologies - Thomas
+Nilefalk; Richard Edgar; Semper IT - Karin Gerritsen; SEN Magazine - Jeremy
+Nicholls; Skvare - Mark Hanna; small biz; Spry Digital - Ellen Hendricks;
+Squiffle Consulting - Aidan Saunders; Stevel; Systopia - Björn Endres; Tech To
+The People - Xavier Dutoit; Victor Huang; Web Access - Kurund Jalmi
 
 ## <a name="feedback"></a>Feedback
 
