--- a/release-notes/4.7.28.md
+++ b/release-notes/4.7.28.md
@@ -2,6 +2,7 @@
 
 Released December 6, 2017
 
+- **[Synopsis](#synopsis)**
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
 - **[Miscellany](#misc)**
@@ -12,11 +13,11 @@ Released December 6, 2017
 
 | *Does this version...?*                                     |         |
 |:----------------------------------------------------------- |:-------:|
-| Fix security vulnerabilities?                               |         |
+| Fix security vulnerabilities?                               |   no    |
 | **Change the database schema?**                             | **yes** |
 | **Alter the API?**                                          | **yes** |
-| Require attention to configuration options?                 |         |
-| Fix problems installing or upgrading to a previous version? |         |
+| Require attention to configuration options?                 |   no    |
+| Fix problems installing or upgrading to a previous version? |   no    |
 | **Introduce features?**                                     | **yes** |
 | **Fix bugs?**                                               | **yes** |
 
@@ -102,6 +103,11 @@ Released December 6, 2017
   activities.  Legacy users should note that the default order is reversed, with
   the newest activities displayed first.
 
+- **Hw 390 fixed iframe popup
+  ([11075](https://github.com/civicrm/civicrm-core/pull/11075))**
+
+  iframe popups on AngularJS pages now have a default height.
+
 ### CiviCase
 
 - **[CRM-20078](https://issues.civicrm.org/jira/browse/CRM-20078) Activity card -
@@ -167,7 +173,7 @@ Released December 6, 2017
 
   The click report summary now orders links by the descending number of clicks.
 
-### Drupal Integration Modules
+### Drupal Integration
 
 - **[CRM-21297](https://issues.civicrm.org/jira/browse/CRM-21297) Automatically
   fill database details in installer for Drupal
@@ -176,6 +182,22 @@ Released December 6, 2017
   The database connection fields when installing CiviCRM on Drupal now default
   to the CMS database connection details.  This matches the process on
   WordPress.
+
+### WordPress Integration
+
+- **[CRM-18754](https://issues.civicrm.org/jira/browse/CRM-18754) Process
+  extension parameters in shortcodes
+  ([112](https://github.com/civicrm/civicrm-wordpress/pull/112))**
+
+  Extensions and WordPress plugins can now process custom parameters in the
+  `civicrm` shortcode.
+
+- **[CRM-21212](https://issues.civicrm.org/jira/browse/CRM-21212) Get E2E Tests
+  working on wordpress
+  ([11017](https://github.com/civicrm/civicrm-core/pull/11017)) (preliminary
+  work)**
+
+  A new function retrives the WordPress user ID from a user name.
 
 ## <a name="bugs"></a>Bugs resolved
 
@@ -198,6 +220,22 @@ Released December 6, 2017
 - **[CRM-21284](https://issues.civicrm.org/jira/browse/CRM-21284) Outdated link
   to mail setup documentation
   ([11104](https://github.com/civicrm/civicrm-core/pull/11104))**
+
+- **[CRM-20892](https://issues.civicrm.org/jira/browse/CRM-20892) Same mailing
+  open in two windows can overwrite data on scheduled mailings
+  ([10965](https://github.com/civicrm/civicrm-core/pull/10965))**
+
+- **[CRM-21362](https://issues.civicrm.org/jira/browse/CRM-21362) Mailing
+  summary report group by MySQL 5.7 error
+  ([11206](https://github.com/civicrm/civicrm-core/pull/11206))**
+
+- **[CRM-20397](https://issues.civicrm.org/jira/browse/CRM-20397) CiviMail send
+  immediately date/time check too sensitive
+  ([11093](https://github.com/civicrm/civicrm-core/pull/11093) and
+  [11092](https://github.com/civicrm/civicrm-core/pull/11092))**
+
+  Users would get errors that they were attempting to schedule mailings in the
+  past.
 
 ### Core CiviCRM
 
@@ -274,6 +312,13 @@ Released December 6, 2017
   This fixes the spelling of a Bulgarian province and a number of Romanian
   counties in the state/province list.
 
+- **[CRM-21283](https://issues.civicrm.org/jira/browse/CRM-21283) Incorporate
+  Barbados and Antigua and Barbuda Parishes into States list
+  ([11100](https://github.com/civicrm/civicrm-core/pull/11100))**
+
+  This adds parishes of Barbados and Antigua and Barbuda to the state/province
+  list.
+
 - **[CRM-21267](https://issues.civicrm.org/jira/browse/CRM-21267) Error 500 -
   Call to undefined method CRM_Contact_Import_Parser::formatCustomDate
   ([11124](https://github.com/civicrm/civicrm-core/pull/11124))**
@@ -309,29 +354,41 @@ Released December 6, 2017
   Attachment.create API HTML escapes the uploaded content
   ([10876](https://github.com/civicrm/civicrm-core/pull/10876))**
 
-- **Hw 390 fixed iframe popup ([11075](https://github.com/civicrm/civicrm-core/pull/11075))**
+- **[CRM-19620](https://issues.civicrm.org/jira/browse/CRM-19620) importing
+  record with external_identifier that matches with a deleted contact results in
+  traceback ([11133](https://github.com/civicrm/civicrm-core/pull/11133))**
 
-- **[CRM-20892](https://issues.civicrm.org/jira/browse/CRM-20892) Same mailing open in two windows can overwrite data on scheduled mailings ([10965](https://github.com/civicrm/civicrm-core/pull/10965))**
+  Now the External ID value is stripped from the contact in the trash and a new
+  contact is created.
 
-- **HW-380: Remove spacer div ([11071](https://github.com/civicrm/civicrm-core/pull/11071))**
+- **[CRM-20545](https://issues.civicrm.org/jira/browse/CRM-20545) contact report
+  lists contacts that have been 'soft' deleted (placed in Trash)
+  ([11136](https://github.com/civicrm/civicrm-core/pull/11136))**
 
-- **Civilint views components files ([482](https://github.com/civicrm/civicrm-drupal/pull/482))**
+- **[CRM-21303](https://issues.civicrm.org/jira/browse/CRM-21303) Dedupe
+  datatable incorrectly calculates rows
+  ([11121](https://github.com/civicrm/civicrm-core/pull/11121))**
 
-- **Civilint 2nd half of civicrm_handler_field files ([486](https://github.com/civicrm/civicrm-drupal/pull/486))**
+  This fixes a problem where no more than 25 rows would display on the conflicts
+  screen.
 
-- **Run civilint against civicrm_handler_filter_state_multi.inc ([488](https://github.com/civicrm/civicrm-drupal/pull/488))**
+- **[CRM-21294](https://issues.civicrm.org/jira/browse/CRM-21294) js error when
+  selecting & unselecting merge contacts
+  ([11117](https://github.com/civicrm/civicrm-core/pull/11117))**
 
-- **Run Civilint against civicrm_engage module ([493](https://github.com/civicrm/civicrm-drupal/pull/493))**
+- **[CRM-21246](https://issues.civicrm.org/jira/browse/CRM-21246) Problem
+  'double chaining', e.g. Contact.get - Relationship.get - Contact.get
+  ([11056](https://github.com/civicrm/civicrm-core/pull/11056))**
 
-- **Run Civilint against the rest of views_handler and views plugin files ([487](https://github.com/civicrm/civicrm-drupal/pull/487))**
+  This fixes problems due to ambiguity of the `value` syntax when using API
+  chaining inside another chained API call.
 
-- **Need to include fields in order by  in select distinct to work ([494](https://github.com/civicrm/civicrm-drupal/pull/494))**
+- **[CRM-21258](https://issues.civicrm.org/jira/browse/CRM-21258) Display name
+  fatal error if names are too long
+  ([11063](https://github.com/civicrm/civicrm-core/pull/11063))**
 
-- **Enable CiviCRM Extensions to interact with the WordPress shortcode ([112](https://github.com/civicrm/civicrm-wordpress/pull/112))**
-
-### NYSS
-
-- **[CRM-21362](https://issues.civicrm.org/jira/browse/CRM-21362) Mailing summary report group by MySQL 5.7 error ([11206](https://github.com/civicrm/civicrm-core/pull/11206))**
+  Display name and sort name will now be truncated rather than cause a fatal
+  error if the length is too long.
 
 ### CiviMember
 
@@ -343,17 +400,31 @@ Released December 6, 2017
   of an organization, and they will display in the on-behalf section of the
   contribution page.
 
-- **[CRM-20227](https://issues.civicrm.org/jira/browse/CRM-20227) Regression - Membership status override gets 'stuck' ([11188](https://github.com/civicrm/civicrm-core/pull/11188))**
+- **[CRM-20227](https://issues.civicrm.org/jira/browse/CRM-20227) Regression -
+  Membership status override gets 'stuck'
+  ([11188](https://github.com/civicrm/civicrm-core/pull/11188))**
 
-- **[CRM-20955](https://issues.civicrm.org/jira/browse/CRM-20955) Contact's second membership fails to inherit when created in back end using price set ([11184](https://github.com/civicrm/civicrm-core/pull/11184))**
+  This resolves a bug that would keep the membership status set by a status
+  override when the override was disabled.
 
-- **[CRM-19998](https://issues.civicrm.org/jira/browse/CRM-19998) Membership start / end date have no effect in Search Builder ([11134](https://github.com/civicrm/civicrm-core/pull/11134))**
+- **[CRM-20955](https://issues.civicrm.org/jira/browse/CRM-20955) Contact's
+  second membership fails to inherit when created in back end using price set
+  ([11184](https://github.com/civicrm/civicrm-core/pull/11184)) (follow-up)**
 
-- **[CRM-20432](https://issues.civicrm.org/jira/browse/CRM-20432) CIVICRM-221 Pending Contributions which have a Payment recorded and are Completed do not trigger the related Membership to become current, status remains pending ([11125](https://github.com/civicrm/civicrm-core/pull/11125))**
+  Test coverage was added.
 
-### WordPress Integration
+- **[CRM-19998](https://issues.civicrm.org/jira/browse/CRM-19998) Membership
+  start / end date have no effect in Search Builder
+  ([11134](https://github.com/civicrm/civicrm-core/pull/11134))**
 
-- **[CRM-21212](https://issues.civicrm.org/jira/browse/CRM-21212) Get E2E Tests working on wordpress ([11017](https://github.com/civicrm/civicrm-core/pull/11017))**
+- **[CRM-20432](https://issues.civicrm.org/jira/browse/CRM-20432) Pending
+  Contributions which have a Payment recorded and are Completed do not trigger
+  the related Membership to become current, status remains pending
+  ([11125](https://github.com/civicrm/civicrm-core/pull/11125))**
+
+- **[CRM-19060](https://issues.civicrm.org/jira/browse/CRM-19060) Membership
+  Detailed Report Payment Amount (most recent) not reporting correct
+  contribution ([8837](https://github.com/civicrm/civicrm-core/pull/8837))**
 
 ### CiviCase
 
@@ -378,6 +449,11 @@ Released December 6, 2017
 
   This resolves a bug in CiviCase 5.0 (org.civicrm.civicase) when printing a
   case document.
+
+- **HW-380: Remove spacer div
+  ([11071](https://github.com/civicrm/civicrm-core/pull/11071))**
+
+  This makes a slight adjustment to the case type editing form.
 
 ### CiviContribute
 
@@ -419,9 +495,22 @@ Released December 6, 2017
   When editing a line item, `hook_civicrm_post` now specifies the ID and table
   of the line item that was modified.
 
-- **[CRM-20772](https://issues.civicrm.org/jira/browse/CRM-20772) Price set calculation precision when sales tax enabled ([11016](https://github.com/civicrm/civicrm-core/pull/11016))**
+- **[CRM-20772](https://issues.civicrm.org/jira/browse/CRM-20772) Price set
+  calculation precision when sales tax enabled
+  ([11016](https://github.com/civicrm/civicrm-core/pull/11016)) (initial work)**
 
-- **[CRM-20572](https://issues.civicrm.org/jira/browse/CRM-20572) Remove jcalendar from Contrib Sybunt custom Search ([10355](https://github.com/civicrm/civicrm-core/pull/10355))**
+  This adds additional decimal places for a price field value's amount field and
+  a membership type's minimum fee field in order to accommodate future changes.
+
+- **[CRM-20572](https://issues.civicrm.org/jira/browse/CRM-20572) Remove
+  jcalendar from Contrib Sybunt custom Search
+  ([10355](https://github.com/civicrm/civicrm-core/pull/10355))**
+
+  This removes a deprecated library.
+
+- **[CRM-21319](https://issues.civicrm.org/jira/browse/CRM-21319) Total Amount
+  not translated on Contribution Page
+  ([11147](https://github.com/civicrm/civicrm-core/pull/11147))**
 
 ### CiviEvent
 
@@ -438,7 +527,13 @@ Released December 6, 2017
   selection from participant does not free up capacity
   ([10805](https://github.com/civicrm/civicrm-core/pull/10805))**
 
-- **[CRM-21327](https://issues.civicrm.org/jira/browse/CRM-21327) Not able to change Payment Processor in event fees ([11153](https://github.com/civicrm/civicrm-core/pull/11153))**
+- **[CRM-21327](https://issues.civicrm.org/jira/browse/CRM-21327) Not able to
+  change Payment Processor in event fees
+  ([11153](https://github.com/civicrm/civicrm-core/pull/11153))**
+
+  The field to choose payment processors on events was different from the
+  corresponding setting for contribution pages.  This makes the two consistent,
+  including handling permissions accurately.
 
 ### Drupal Integration Modules
 
@@ -453,43 +548,25 @@ Released December 6, 2017
   when calling drush cvapi should be treated as a drush error
   ([503](https://github.com/civicrm/civicrm-drupal/pull/503))**
 
-- **[CRM-21272](https://issues.civicrm.org/jira/browse/CRM-21272) CMSUser has Drupal 6/7 code that breaks when using with Drupal 8 ([11145](https://github.com/civicrm/civicrm-core/pull/11145), [11139](https://github.com/civicrm/civicrm-core/pull/11139), and [11079](https://github.com/civicrm/civicrm-core/pull/11079))**
+- **[CRM-21132](https://issues.civicrm.org/jira/browse/CRM-21132) Member Role
+  Sync: civicrm_member_roles produces a Fatal "unknown error" when one hits
+  Manually Synchronize
+  ([494](https://github.com/civicrm/civicrm-drupal/pull/494))**
 
-- **[CRM-19995](https://issues.civicrm.org/jira/browse/CRM-19995) Notice : Undefined offset: 5 dans _civicrm_member_roles_sync() ([500](https://github.com/civicrm/civicrm-drupal/pull/500))**
+- **[CRM-21272](https://issues.civicrm.org/jira/browse/CRM-21272) CMSUser has
+  Drupal 6/7 code that breaks when using with Drupal 8
+  ([11145](https://github.com/civicrm/civicrm-core/pull/11145),
+  [11139](https://github.com/civicrm/civicrm-core/pull/11139), and
+  [11079](https://github.com/civicrm/civicrm-core/pull/11079))**
 
-### CiviContribute, Internationalisation
+  Code to determine if user registration is permitted is now handled in the
+  `CRM_Utils_System` classes.
 
-- **[CRM-21319](https://issues.civicrm.org/jira/browse/CRM-21319) Total Amount not translated on Contribution Page ([11147](https://github.com/civicrm/civicrm-core/pull/11147))**
+- **[CRM-19995](https://issues.civicrm.org/jira/browse/CRM-19995) Notice :
+  Undefined offset: 5 dans _civicrm_member_roles_sync()
+  ([500](https://github.com/civicrm/civicrm-drupal/pull/500))**
 
-### Import
-
-- **[CRM-19620](https://issues.civicrm.org/jira/browse/CRM-19620) importing record with external_identifier that matches with a deleted contact results in traceback ([11133](https://github.com/civicrm/civicrm-core/pull/11133))**
-
-### CiviReport
-
-- **[CRM-20545](https://issues.civicrm.org/jira/browse/CRM-20545) contact report lists contacts that have been 'soft' deleted (placed in Trash) ([11136](https://github.com/civicrm/civicrm-core/pull/11136))**
-
-- **[CRM-19060](https://issues.civicrm.org/jira/browse/CRM-19060) Membership Detailed Report Payment Amount (most recent) not reporting correct contribution ([8837](https://github.com/civicrm/civicrm-core/pull/8837))**
-
-### Dedupe
-
-- **[CRM-21303](https://issues.civicrm.org/jira/browse/CRM-21303) Dedupe datatable incorrectly calculates rows ([11121](https://github.com/civicrm/civicrm-core/pull/11121))**
-
-- **[CRM-21294](https://issues.civicrm.org/jira/browse/CRM-21294) js error when selecting & unselecting merge contacts ([11117](https://github.com/civicrm/civicrm-core/pull/11117))**
-
-### Core CiviCRM, Internationalisation
-
-- **[CRM-21283](https://issues.civicrm.org/jira/browse/CRM-21283) Incorporate Barbados and Antigua and Barbuda Parishes into States list ([11100](https://github.com/civicrm/civicrm-core/pull/11100))**
-
-### CiviMail, NYSS
-
-- **[CRM-20397](https://issues.civicrm.org/jira/browse/CRM-20397) CiviMail send immediately date/time check too sensitive ([11093](https://github.com/civicrm/civicrm-core/pull/11093) and [11092](https://github.com/civicrm/civicrm-core/pull/11092))**
-
-### CiviCRM API
-
-- **[CRM-21246](https://issues.civicrm.org/jira/browse/CRM-21246) Problem 'double chaining', e.g. Contact.get - Relationship.get - Contact.get ([11056](https://github.com/civicrm/civicrm-core/pull/11056))**
-
-- **[CRM-21258](https://issues.civicrm.org/jira/browse/CRM-21258) Display name fatal error if names are too long ([11063](https://github.com/civicrm/civicrm-core/pull/11063))**
+  This fixes a typo in the member role sync module that led to a PHP notice.
 
 ### Joomla Integration
 
@@ -526,6 +603,21 @@ Released December 6, 2017
 
 - **(NFC) Add in test of current practice in updating multiselect custom data
   ([11081](https://github.com/civicrm/civicrm-core/pull/11081))**
+
+- **Civilint views components files
+  ([482](https://github.com/civicrm/civicrm-drupal/pull/482))**
+
+- **Civilint 2nd half of civicrm_handler_field files
+  ([486](https://github.com/civicrm/civicrm-drupal/pull/486))**
+
+- **Run civilint against civicrm_handler_filter_state_multi.inc
+  ([488](https://github.com/civicrm/civicrm-drupal/pull/488))**
+
+- **Run Civilint against civicrm_engage module
+  ([493](https://github.com/civicrm/civicrm-drupal/pull/493))**
+
+- **Run Civilint against the rest of views_handler and views plugin files
+  ([487](https://github.com/civicrm/civicrm-drupal/pull/487))**
 
 ## <a name="credits"></a>Credits
 
