--- a/release-notes/4.7.29.md
+++ b/release-notes/4.7.29.md
@@ -25,7 +25,7 @@ Released December 20, 2017
 
 ### Core CiviCRM
 
-- **[CRM-20941](https://issues.civicrm.org/jira/browse/CRM-20941) Increase Minimum PHP required to install CiviCRM
+- **[CRM-20941](https://issues.civicrm.org/jira/browse/CRM-20941) Increase minimum PHP required to install CiviCRM
   ([11416](https://github.com/civicrm/civicrm-core/pull/11416))**
 
   Increases the minimum PHP version required to install CiviCRM 4.7.29 to be 5.4 as per the [announcement blog post](https://civicrm.org/blog/totten/end-of-zombies-php-53-and-54)
@@ -34,18 +34,18 @@ Released December 20, 2017
 
 ### Core CiviCRM
 
-- **[CRM-21445](https://issues.civicrm.org/jira/browse/CRM-20941) Ensure Pay Later Processor is set so a fatal isn't thrown
+- **[CRM-21445](https://issues.civicrm.org/jira/browse/CRM-20941) Ensure "Pay Later" processor is set so a fatal isn't thrown
   ([11427](https://github.com/civicrm/civicrm-core/pull/11427))**
 
-  Ensures that the pay later payment Processor is set to that a fatal error isn't thrown
+  Ensures that the pay later payment processor is set to that a fatal error isn't thrown
 
-- **[CRM-21431](https://issues.civicrm.org/jira/browse/CRM-21431) Fix Removing of group types
+- **[CRM-21431](https://issues.civicrm.org/jira/browse/CRM-21431) Fix removing of group types
   ([11436](https://github.com/civicrm/civicrm-core/pull/11436))**
 
   Fixes an issue where unchecking both the ACL and Mailing list box when editing a group didn't actually remove those types
 
 - **[CRM-21568](https://issues.civicrm.org/jira/browse/CRM-21568) Move the determination of values of empty from settingsbag to InnodbIndxer
-  ([11423[(https://github.com/civicrm/civicrm-core/pull/11423))**
+  ([11423](https://github.com/civicrm/civicrm-core/pull/11423))**
 
   Fixes an issue where string '0' wasn't being treated as false. So the checking of whether there is an empty value is now done in the on change listener for the full text search switcher
 
