Update 4.7.29 - Put in revised author list

--- a/release-notes/4.7.29.md
+++ b/release-notes/4.7.29.md
@@ -59,42 +59,18 @@ Released December 20, 2017
 
   Fixes an issue where the check to see if the MySQL server was a MariaDB instance wasn't working right. This lead to hard crashes as queries were being incorrectly re-written
 
-
 ## <a name="credits"></a>Credits
 
 This release was developed by the following code authors:
 
-AGH Strategies - Alice Frumin, Andrew Hunt; Agileware - Alok Patel, Justin
-Freeman; Australian Greens - Seamus Lee; Christian Wach; Circle Interactive -
-Dave Jenkins; CiviCoop - Klaas Eikelboom; CiviCRM - Coleman Watts, Tim Otten;
-CiviDesk - Nicolas Ganivet, Yashodha Chaku; CiviFirst - John Kirk; Community IT
-Academy - William Mortada; CompuCorp - Michael Devery, Mukesh Ram, Omar Abu
-Hussein; Coop SymbioTIC - Mathieu Lutfy; Daniël van Vuuren; Deepak Srivastava;
-Freeform Solutions - Herb van den Dool; Fuzion - Jitendra Purohit; JMA
-Consulting - Edsel Lopez, Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery -
-Allen Shaw; Lemniscus - Noah Miller; Megaphone Technology Consulting - Jon
-Goldberg; MJW Consulting - Matthew Wire; Olivier Hertrich; Pawel Nowak; PowDevel -
-Beto Aveiga; Progressive Technology Project - Jamie McClelland; Tadpole
-Collective - Kevin Cristiano; Wikimedia Foundation - Eileen McNaughton, Maggie
-Epps
+Australian Greens - Seamus Lee; CiviCRM - Coleman Watts, Tim Otten;
+Coop SymbioTIC - Mathieu Lutfy; Wikimedia Foundation - Eileen McNaughton
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-Adam Zilkie; AGH Strategies - Josh Corlew; Agileware - Agileware Team; Andrew
-Thompson; Blackfly Solutions - Alan Dixon; British Humanist Association -
-William Gordon; CiviDesk - Sunil Pawar; CompuCorp - Anna Kovalova, Guanhuan
-Chen, Mirela Stanila; DevMate - Adam Kwiatkowski; Effy Elden; Electronic
-Frontier Foundation - Mark Burdett; Ginkgo Street Labs - Frank Gómez; JMA
-Consulting - Joe Murray; Joanne Chester; Johan Vervloet; Jonathan Richardson;
-Korlon - Stuart Gaston; Left Join Labs - Sean Madsen; Levity - Kevin Levie;
-Lighthouse Design and Consulting - Brian Shaughnessy; Lorenzo Ardizzone; MC3 -
-Graham Mitchell; Marcello Gribaudo; Mohamed Ziada; myDropWizard - David Snopek;
-Neil Zampella; Nicol Wistreich; Responsive Development Technologies - Thomas
-Nilefalk; Richard Edgar; Semper IT - Karin Gerritsen; SEN Magazine - Jeremy
-Nicholls; Skvare - Mark Hanna; small biz; Spry Digital - Ellen Hendricks;
-Squiffle Consulting - Aidan Saunders; Stevel; Systopia - Björn Endres; Tech To
-The People - Xavier Dutoit; Victor Huang; Web Access - Kurund Jalmi
+Ben Mango; JMA Consulting - Monish Deb; Megaphone Technology Consulting - Jon
+Goldberg; Richard van Oosterhout
 
 ## <a name="feedback"></a>Feedback
 
